--- a/requirements.txt
+++ b/requirements.txt
@@ -50,7 +50,7 @@ slack_sdk==3.35.0
 sniffio==1.3.1
 spinners==0.0.24
 sse-starlette==2.3.6
-starlette==0.47.0
+starlette==0.37.2
 strands-agents==0.1.7
 strands-agents-builder==0.1.3
 strands-agents-tools==0.1.5
@@ -64,3 +64,4 @@ uvicorn==0.34.3
 watchdog==6.0.0
 wcwidth==0.2.13
 zipp==3.23.0
+fastapi==0.111.0
